--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="style.css">
-	<title>WEB SYSTEM</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sparefood</title>
+    <link rel="stylesheet" href="stylesPro.css"> <!-- Link to your CSS file for styling -->
+         
+
 </head>
 <body>
+    <a href="C:\Users\983440\Desktop">
+        <img src="Background.jpg" alt="Description of the image">
+    </a>
+    <h0>
+    <div class="dashboard">
+            <h1>Sparefood</h1>
+        </div>
+    </h0>
+    <header>
+        
+        <nav>
+            <ul>
+                <li><a href="#">Dashboard</a></li>
+                <li><a href="#">Vegetables</a></li>
+                <li><a href="#">Fruits</a></li>
+                <li><a href="#">Vegan</a></li>
+                <li><a href="#">Non-Veg</a></li>
+                <li><a href="#">Beverages</a></li>
+            </ul>
+        </nav>
+    </header>
 
-	<p>This is a test paragraph for ali</p>
-	<p>this is an example</p>
+    <main>
+        <section>
+            <h1>Welcome to Spare Food Pickup Reservations</h1>
+            <p>Do your part in reducing food waste! Post your excess food here and let others reserve it for pickup.</p>
+            <p>Together, we can make a difference by helping ourselves & others.</p>
+        </section>
+    </main>
 
+    <footer>
+        <!-- Footer Content Goes Here -->
+    <p>&copy; 2024 Sparefood. All rights reserved.</p>
+
+    </footer>
 </body>
 </html>
