--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sparefood</title>
-    <link rel="stylesheet" href="stylesPro.css"> <!-- Link to your CSS file for styling -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file for styling -->
          
 
 </head>
 <body>
-    <a href="C:\Users\983440\Desktop">
-        <img src="Background.jpg" alt="Description of the image">
     </a>
     <h0>
     <div class="dashboard">
