--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
          
 
 </head>
+
+
 <body>
     </a>
-    <h0>
-    <div class="dashboard">
+    <div class="logo">
             <h1>Sparefood</h1>
-        </div>
-    </h0>
+    </div>
+
     <header>
         
         <nav>
