Revert "version 1.7 title changed"
This reverts commit b5428d47dc18fc9214c9ce2e3dd5251e79f53025.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     </a>
     <div class="logo">
-            <h1>Sparefood/h1>
+            <h1>Sparefood</h1>
     </div>
 
     <header>
